--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^8.40",
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
+        "pusher/pusher-php-server": "^7.0",
         "twilio/sdk": "^6.27"
     },
     "require-dev": {
